--- a/app/src/main/res/menu/movie_list.xml
+++ b/app/src/main/res/menu/movie_list.xml
@@ -12,4 +12,8 @@
         android:title="@string/top_movies"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/favorite_movies"
+        android:title="@string/favorite_movies"
+        app:showAsAction="never" />
 </menu>
