Updated Reviews and Trailers style and visibility.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Title">
+        <item name="android:textSize">38sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="LargeHeader">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="MediumHeader">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="RegularText">
+    </style>
 </resources>
