--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -13,6 +13,7 @@
 
         <TextView
             android:id="@+id/tv_title"
+            style="@style/Title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/titleBackground"
@@ -22,8 +23,6 @@
             android:paddingEnd="24dp"
             android:paddingBottom="28dp"
             android:text="@string/not_available"
-            android:textColor="@android:color/white"
-            android:textSize="38sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,31 +41,32 @@
 
         <TextView
             android:id="@+id/tv_release_year"
+            style="@style/LargeHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/release_year"
             android:text="@string/not_available"
-            android:textSize="30sp"
             app:layout_constraintStart_toEndOf="@+id/iv_poster"
             app:layout_constraintTop_toTopOf="@+id/iv_poster"
             tools:text="2015" />
 
         <TextView
             android:id="@+id/tv_rating"
+            style="@style/MediumHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/rating"
             android:text="@string/not_rated"
-            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/tv_release_year"
             app:layout_constraintTop_toBottomOf="@+id/tv_release_year"
             tools:text="8.1/10" />
 
         <TextView
             android:id="@+id/tv_overview"
+            style="@style/RegularText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -74,14 +74,13 @@
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/movie_overview"
             android:text="@string/not_available"
-            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_poster"
             tools:text="Every child comes into the world ..." />
 
         <View
-            android:id="@+id/divider"
+            android:id="@+id/divider_trailers"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginStart="8dp"
@@ -93,14 +92,15 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_overview" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_trailers"
+            style="@style/MediumHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/trailers"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider" />
+            app:layout_constraintTop_toBottomOf="@+id/divider_trailers" />
 
         <include
             android:id="@+id/trailers"
@@ -112,27 +112,16 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_trailers" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_reviews"
+            style="@style/MediumHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/reviews"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider3" />
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="395dp"
-            android:layout_height="1dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trailers" />
 
@@ -146,7 +135,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />
 
         <CheckBox
             android:id="@+id/cb_favorite"
