--- a/app/src/main/res/drawable/image_placeholder.xml
+++ b/app/src/main/res/drawable/image_placeholder.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/darker_gray"/>
+
+    <gradient
+        android:angle="90"
+        android:centerColor="#555994"
+        android:endColor="#555994"
+        android:startColor="#b5b6d2"
+        android:type="linear" />
 </shape>
