--- a/app/src/main/res/layout/movie_view_item.xml
+++ b/app/src/main/res/layout/movie_view_item.xml
@@ -2,20 +2,28 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitStart"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:contentDescription="@string/movie_image"
         android:layout_margin="1dp" />
 
     <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:id="@+id/title"
+        style="@style/PlaceholderTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingTop="24dp"
         android:visibility="gone"
-        android:text="@string/not_available"/>
+        android:gravity="center_horizontal"
+        android:text="@string/not_available"
+        android:textAlignment="center" />
 </FrameLayout>
