--- a/app/src/main/res/layout/movie_view_item.xml
+++ b/app/src/main/res/layout/movie_view_item.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/PlaceholderTitle"
+        style="@style/LargePlaceholderTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="8dp"
