--- a/app/src/main/res/layout/reviews.xml
+++ b/app/src/main/res/layout/reviews.xml
@@ -3,5 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <TextView android:id="@+id/tv_no_reviews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:visibility="gone"
+        android:text="@string/no_reviews_available"/>
 </LinearLayout>
