--- a/app/src/main/res/layout/trailers.xml
+++ b/app/src/main/res/layout/trailers.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
+    <TextView android:id="@+id/tv_no_trailers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:visibility="gone"
+        android:text="@string/no_trailers_available"/>
 </LinearLayout>
