--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
     <style name="RegularText">
     </style>
 
-    <style name="PlaceholderTitle">
+    <style name="LargePlaceholderTitle">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:typeface">sans</item>
@@ -38,4 +38,5 @@
         <item name="android:typeface">sans</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+
 </resources>
