--- a/app/src/main/res/drawable/image_placeholder.xml
+++ b/app/src/main/res/drawable/image_placeholder.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
+    <size android:width="300dp"
+        android:height="400dp"/>
     <gradient
         android:angle="90"
         android:centerColor="#555994"
