--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -7,6 +7,7 @@
     tools:context=".MovieDetailsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/page_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="28dp">
@@ -165,7 +166,15 @@
             tools:text="Movie Title"
             tools:visibility="visible" />
 
-
+        <ProgressBar
+            android:id="@+id/loading_progress"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
+            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
+            app:layout_constraintStart_toStartOf="@+id/iv_poster"
+            app:layout_constraintTop_toTopOf="@+id/iv_poster" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
